--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,28 @@
 # Auto detect text files and perform LF normalization
 * text=auto
+Python
+pycache/
+*.py[cod]
+*$py.class
+
+Virtual environment
+venv/
+.venv/
+ENV/
+env/
+ENV/
+env.bak/
+venv.bak/
+
+IDE / Editor specific files
+.vscode/
+.idea/
+*.swp
+*.swo
+
+Data files (if you don't want to commit large .mat files)
+*.mat
+data/
+Operating System files
+.DS_Store
+Thumbs.db
